force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/leaseworks__Global_Accounting_Setup__c.object-meta.xml
<CustomObject>
    <label>Global Accounting Setting</label>
    <nameField>
        <label>Global Accounting Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Accounting Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>