force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Accounting_ON__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting ON?</label>
    <type>Checkbox</type>
</CustomField>