force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Accrual_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accrual_Method__c</fullName>
    <description>Select the method that will be used to prorate the days for deferred revenue.</description>
    <inlineHelpText>Select the method that will be used to prorate the days for deferred revenue.</inlineHelpText>
    <label>Deferred Revenue Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual(365)</fullName>
                <default>true</default>
                <label>Actual(365)</label>
            </value>
            <value>
                <fullName>Set Number of Days</fullName>
                <label>Fixed Number of Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>