force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Block_Journal_Reversals__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Block_Journal_Reversals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, journal reversal is disabled.</inlineHelpText>
    <label>Block Journal Reversals</label>
    <type>Checkbox</type>
</CustomField>