force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Block_Journal_Unposting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Block_Journal_Unposting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, journal unposting is disabled.</inlineHelpText>
    <label>Block Journal Unposting</label>
    <type>Checkbox</type>
</CustomField>