force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Cash_Journal_Split__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Journal_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you would like cash journal lines to be split out based on receivable allocation.</description>
    <inlineHelpText>Check this box if you would like cash journal lines to be split out based on receivable allocation.</inlineHelpText>
    <label>Cash Journal Split</label>
    <type>Checkbox</type>
</CustomField>