force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Default_Interest_Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Default_Interest_Accounting_Method__c</fullName>
    <label>Default Interest Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrual</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>