force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Default_Journal_Export_Format__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Default_Journal_Export_Format__c</fullName>
    <description>This field is used to default the Export format on the Journal Export Transaction LWC CMP</description>
    <label>Default Journal Export Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>Bulk JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>