force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Ledger_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ledger_Currency__c</fullName>
    <description>Ledger currency refers to the base currency used for recording financial transactions in an accounting ledger. It is the currency in which all transactions are initially recorded before conversions or consolidations take place.</description>
    <inlineHelpText>Choose a primary currency for your ledger.</inlineHelpText>
    <label>Ledger Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>