force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__SLR_Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SLR_Accounting_Method__c</fullName>
    <description>Please select a method to record the straight-line revenue journals for financial analysis.</description>
    <inlineHelpText>Please select a method to record the straight-line revenue journals for financial analysis.</inlineHelpText>
    <label>SLR Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross</fullName>
                <default>true</default>
                <label>Gross</label>
            </value>
            <value>
                <fullName>Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>