force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__SLR_Adj__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SLR_Adj__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to consider the calendar period Lease Revenue instead of Lease Revenue billed during the rent period  for SLR adjustment calculation.</inlineHelpText>
    <label>SLR Adj.Based on Monthly Lease Revenue</label>
    <type>Checkbox</type>
</CustomField>