force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__SLR_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SLR_Calculation_Method__c</fullName>
    <description>Select the method for calculating the average monthly straight-line amount.</description>
    <inlineHelpText>Select the method for calculating the average monthly straight-line amount.</inlineHelpText>
    <label>SLR Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Even Periods</fullName>
                <default>true</default>
                <label>Even Periods</label>
            </value>
            <value>
                <fullName>Fixed(30/360)</fullName>
            </value>
            <value>
                <fullName>Actual Days</fullName>
                <label>Actual(365)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>