force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/fields/leaseworks__Transfer_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transfer_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the system generates a new set of journals moving the amount due from the receivables account to a deferred accounts receivable account.</inlineHelpText>
    <label>Transfer Balance to Deferral GL Account?</label>
    <type>Checkbox</type>
</CustomField>