force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__Accrual_Days_Basis_greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Accrual_Days_Basis_greater_than_Zero</fullName>
    <active>true</active>
    <description>Accrual Days Basis should accept value greater than 0</description>
    <errorConditionFormula>AND(
ISPICKVAL(leaseworks__Accrual_Method__c,&#39;Set Number of Days&#39;),
OR(leaseworks__Accrual_Days_Basis__c &lt; 30,leaseworks__Accrual_Days_Basis__c &gt; 31)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Accrual_Days_Basis__c</errorDisplayField>
    <errorMessage>Deferred Basis should be between 30.0 and 31.0</errorMessage>
</ValidationRule>