force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__Accrual_Days_Basis_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Accrual_Days_Basis_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

    ISPICKVAL( leaseworks__Accrual_Method__c , &apos;Set Number of Days&apos;),

    ISBLANK( leaseworks__Accrual_Days_Basis__c )

)</errorConditionFormula>
    <errorDisplayField>leaseworks__Accrual_Days_Basis__c</errorDisplayField>
    <errorMessage>Deferred Basis is required if Deferred Revenue Method is Fixed Number of Days. Please enter value for Deferred Basis.</errorMessage>
</ValidationRule>