force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__Accrual_Method_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Accrual_Method_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( leaseworks__Accrual_Method__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Accrual_Method__c</errorDisplayField>
    <errorMessage>Please select a value for Deferred Revenue Method.</errorMessage>
</ValidationRule>