force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__Bank_Fee_Accounting_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Bank_Fee_Accounting_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,leaseworks__Accounting_ON__c,ISBLANK(TEXT( leaseworks__Bank_Fee_Accounting_Default__c )))</errorConditionFormula>
    <errorMessage>Bank Fee Accounting is required to proceed.</errorMessage>
</ValidationRule>