force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__Default_Accounting_Setup_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Default_Accounting_Setup_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,leaseworks__Accounting_ON__c,ISBLANK(leaseworks__Default_Accounting_Profile__c))</errorConditionFormula>
    <errorMessage>Default Accounting Profile is mandatory</errorMessage>
</ValidationRule>