force-app/main/default/objects/leaseworks__Global_Accounting_Setup__c/validationRules/leaseworks__DeferredBasis_SetNoOfDaysMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DeferredBasis_SetNoOfDaysMethod</fullName>
    <active>true</active>
    <description>if Accrual Method  is Actual 365 and Accrual Days Basis is not null, then throw the validation</description>
    <errorConditionFormula>AND(
ISPICKVAL( leaseworks__Accrual_Method__c , &apos;Actual(365)&apos;),
!ISBLANK( leaseworks__Accrual_Days_Basis__c )
)</errorConditionFormula>
    <errorMessage>Deferred Basis is applicable only for Fixed Number of Days method</errorMessage>
</ValidationRule>